<resources>
    <string name="app_name">InventoryApp</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="sql_insert_inventory_successful">Inventory saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="sql_insert_inventory_failed">Error with saving inventory</string>

    <string name="category_overview">Inventory Desc:</string>

    <string name="hint_product_name">Pinball Part Name</string>

    <string name="hint_product_price">Price</string>

    <string name="category_quantity">Quantity</string>

    <string name="product_quantity">product_quantity</string>

    <string name="category_supplier">Supplier Name</string>

    <string name="supplier_phone">Supplier Phone #</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_number">1111111111</string>

    <string name="editor_activity_title_new_product">Add Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="editor_insert_product_failed">Insert Product Failed</string>

    <string name="editor_insert_product_successful">Insert Product Successful</string>

    <string name="editor_update_product_failed">Update Product Failed</string>

    <string name="editor_update_product_successful">Update Product Successful</string>

    <string name="action_save">Save Product</string>

    <string name="action_delete">Delete Product</string>

    <string name="unsaved_changes_dialog_msg">Warning, Unsaved Changes!</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this Product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="editor_delete_product_failed">Failed to Delete Product</string>

    <string name="editor_delete_product_successful">Product Deleted</string>

    <string name="empty_view_title_text">No Products in the Database</string>

    <string name="empty_view_subtitle_text">Click that button below!</string>

    <string name="stock_error">No more stock, please re-order</string>

    <string name="price_label">Price:</string>

    <string name="required_name_toast">Please enter a Product Name</string>

    <string name="required_price_toast">Please enter a unit Price</string>

    <string name="required_supplier_toast">Please enter a Supplier Name</string>

    <string name="required_supplierphone_toast">Please enter a Supplier Phone</string>

    <string name="required_quantity_toast">Please enter a Product Quantity</string>

    <string name="nonulls_quantity_toast">No Nulls allowed - replacing with a 0</string>

</resources>
