<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
            <!-- Label -->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price_label" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/decrease_quantity_btn"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="6dp"
                    android:text="-"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_quantity_text"
                    android:layout_width="51dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:hint="@string/product_quantity"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/increase_quantity_btn"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="6dp"
                    android:text="+"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!-- Measurement category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <!-- Units for weight (kg) -->

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_phone" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->


                <!-- Units for weight (kg) -->
                <EditText
                    android:id="@+id/edit_supplier_number"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_number"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_supplier_contact"
                    style="@style/ButtonSupplierStyle"
                    android:layout_width="106dp"
                    android:layout_height="36dp"
                    android:layout_below="@id/edit_supplier_number"
                    android:text="Contact" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>